Fix to suppress field validation in case the path is not present. Also test cases update.